# concourse-jsonschema-generator

./: Cargo.toml  README.md  schema.json
.github/workflows/: main-schema-update.yml  pr-check.yml
src/: convert.rs
src/schema/: serialize.rs
