[package]
name = "concourse-jsonschema-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
env_logger = "0.9.0"
itertools = "0.10.3"
log = "0.4.17"
peg = "0.8.0"
regex = "1.6.0"
serde_json = "1.0.82"

[[bin]]
name = "concourse-jsonschema-generator"
path = "src/main.rs"
